# AxiomPy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  build.ps1  build.sh  installer.ps1  installer.sh  pyproject.toml  setup.py
.github/workflows/: benchmark.yml  publish.yml  test.yml
axiompy/: __init__.py  _backend.py  _base.py  _basic_math.py  _cache.py  _config.py  _constants.py  _cupy_backend.py  _facade.py  _io.py  _jax_backend.py  _jupyter.py  _lazy.py  _magic.py  _mmap.py  _pure_array.py  _pure_backend.py  _sparse.py  autodiff.py  bayesian.py  calculus.py  cli.py  complex_numbers.py  core.py  crypto.py  electromagnetism.py  fractal.py  geometry.py  graph.py  linalg.py  matrix.py  number_theory.py  odes.py  optimization.py  polynomial.py  signal.py  special.py  stats.py  tensor.py  vector.py  (+1 more)
benchmarks/: __init__.py  test_matrix_bench.py  test_polynomial_bench.py  test_vector_bench.py
docs/: basic_math.md  cache.md  cli.md  constants.md  contributing.md  getting-started.md  io.md  magic.md  overview.md  tutorial.md  usage.md
docs/api/: conf.py  index.rst
examples/: accel_backends.py  ascii_plot.py  autodiff.py  basic_math.py  bayesian.py  calculus.py  complex_numbers.py  covariance.py  crypto.py  electric_field.py  fractal.py  geometry.py  graph_traversal.py  jupyter_integration.py  lazy_eval.py  linear_algebra.py  mmap_dtype.py  number_theory.py  odes.py  optimization.py  pagerank.py  polynomials.py  pure_backend.py  signal.py  sparse_matrix.py  special_functions.py  stats.py  tensor_example.py
recipe/: meta.yaml
tests/: conftest.py  test_accel_backends.py  test_autodiff.py  test_backend.py  test_basic_math.py  test_bayesian.py  test_cache.py  test_calculus.py  test_cli.py  test_complex_numbers.py  test_config.py  test_constants.py  test_crypto.py  test_electromagnetism.py  test_fractal.py  test_geometry.py  test_graph.py  test_io.py  test_jupyter.py  test_lazy.py  test_linalg.py  test_magic.py  test_matrix.py  test_mmap.py  test_number_theory.py  test_odes.py  test_optimization.py  test_polynomial.py  test_pure_backend.py  test_signal.py  test_sparse.py  test_special.py  test_stats.py  test_tensor.py  test_vector.py  test_visualization.py
