[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axiompy"
version = "3.0.0"
description = "A powerful Python mathematics engine for computation and education."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "rkriad585", email = "rkriad585@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/rkriad585/AxiomPy"
Repository = "https://github.com/rkriad585/AxiomPy"

[tool.hatch.build.targets.sdist]
include = ["/axiompy"]

[tool.hatch.build.targets.wheel]
packages = ["axiompy"]
