[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axiompy"
version = "4.0.0"
description = "A powerful Python mathematics engine for computation and education."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "rkriad585", email = "rkriad585@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.scripts]
axiompy = "axiompy.cli:main"

[project.urls]
Homepage = "https://github.com/rkriad585/AxiomPy"
Repository = "https://github.com/rkriad585/AxiomPy"

[tool.hatch.build.targets.sdist]
include = ["/axiompy"]

[tool.hatch.build.targets.wheel]
packages = ["axiompy"]

[tool.axiompy]
precision = 6
dtype = "float64"
verbose = false

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.6.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
lint.select = ["F", "E", "W", "I", "N", "UP", "YTT", "ASYNC", "SIM", "RUF"]
lint.ignore = ["E501", "E741", "N802", "N803", "N806", "N818", "SIM108"]
lint.per-file-ignores = {"__init__.py" = ["F401", "F403"]}

[tool.ruff.lint.pydocstyle]
convention = "google"
